Closed
Bug 249809
Opened 22 years ago
Closed 22 years ago
wrong referer sent for generated content linked from stylesheet
Categories
(Core :: CSS Parsing and Computation, defect)
Core
CSS Parsing and Computation
Tracking
()
RESOLVED
FIXED
mozilla1.8beta1
People
(Reporter: dbaron, Assigned: dbaron)
References
()
Details
(Whiteboard: [patch])
Attachments
(1 file, 1 obsolete file)
|
22.88 KB,
patch
|
bzbarsky
:
review+
bzbarsky
:
superreview+
|
Details | Diff | Splinter Review |
Description: This is similar to bug 249168 and bug 249171. When the 'content'
property contains a url() value, we should send the stylesheet URL as the HTTP
Referer header when retrieving the URL.
Steps to Reproduce: Load http://dbaron.org/css/test/2004/referer/content
Actual results: red square
Expected results: green square
| Assignee | ||
Comment 1•22 years ago
|
||
Doesn't compile yet; the new content class needs to live in content.
| Assignee | ||
Comment 2•22 years ago
|
||
I talked to jst about the new file and it was ok with him.
Attachment #152310 -
Attachment is obsolete: true
| Assignee | ||
Updated•22 years ago
|
Attachment #152458 -
Flags: superreview?(bzbarsky)
Attachment #152458 -
Flags: review?(bzbarsky)
Comment 3•22 years ago
|
||
Comment on attachment 152458 [details] [diff] [review]
patch
>Index: content/shared/src/nsStyleStruct.cpp
>+PRBool nsStyleContentData::operator==(const nsStyleContentData& aOther)
>+ return mContent.mString == aOther.mContent.mString;
I know you just copied this, but that should be a string compare, not a pointer
compare.
>Index: content/html/style/src/nsCSSDataBlock.cpp
> case eCSSType_ValueList:
>+ if (iProp == eCSSProperty_content) {
Add a comment below the if block that we're falling through on purpose?
>Index: content/svg/document/src/Makefile.in
This isn't really relevant to this bug.
>Index: content/xul/content/src/nsXULElement.h
Nor is this.
>Index: layout/html/style/src/nsCSSFrameConstructor.cpp
>@@ -1353,48 +1353,44 @@ nsCSSFrameConstructor::CreateGeneratedFr
>+ if (!data.mContent.mImage) {
> // CSS had something specified that couldn't be converted to a URI object
"image object"
r+sr=bzbarsky with those nits
Attachment #152458 -
Flags: superreview?(bzbarsky)
Attachment #152458 -
Flags: superreview+
Attachment #152458 -
Flags: review?(bzbarsky)
Attachment #152458 -
Flags: review+
| Assignee | ||
Comment 4•22 years ago
|
||
(In reply to comment #3)
> >Index: content/svg/document/src/Makefile.in
> This isn't really relevant to this bug.
> >Index: content/xul/content/src/nsXULElement.h
> Nor is this.
They actually were relevant (although a good bit more was needed) before I moved
a bunch of nsStyleContentData functions from the .h file to the .cpp file, and I
figured they were good changes anyway...
| Assignee | ||
Updated•22 years ago
|
Whiteboard: [patch]
| Assignee | ||
Comment 5•22 years ago
|
||
Fix checked in to trunk, 2004-07-14 15:19 -0700.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.8beta
You need to log in
before you can comment on or make changes to this bug.
Description
•