Load generated content images from the style system rather than the frame constructor.  b=249809  r+sr=bzbarsky